# SimpleStaticAnalyzer

./: .clang-format  .gitignore  README.md  build.sh
Team03/Code03/src/autotester/: CMakeLists.txt
Team03/Code03/src/autotester/src/: AbstractWrapper.h  TestWrapper.cpp  TestWrapper.h
Team03/Code03/src/integration_testing/: CMakeLists.txt
Team03/Code03/src/integration_testing/src/: main.cpp
Team03/Code03/src/integration_testing/src/sp/: TestSPToPKB.cpp
Team03/Code03/src/spa/: CMakeLists.txt
Team03/Code03/src/spa/src/: .clang-format  Parser.cpp  Parser.h
Team03/Code03/src/spa/src/QPS/: QueryFacade.cpp  QueryFacade.h  Synonyms.h
Team03/Code03/src/spa/src/SP/DesignExtractor/: DesignExtractor.cpp  Visitor.h
Team03/Code03/src/spa/src/common/: ArithmeticOperation.cpp  ArithmeticOperation.h  AssignStatement.cpp  AssignStatement.h  CallStatement.cpp  CallStatement.h  Cfg.cpp  Cfg.h  CfgNode.cpp  CfgNode.h  ConditionalOperation.cpp  ConditionalOperation.h  Constant.cpp  Constant.h  Entity.h  EntityType.h  Expression.cpp  Expression.h  IfStatement.cpp  IfStatement.h  Operation.cpp  Operation.h  PrintStatement.cpp  PrintStatement.h  Procedure.cpp  Procedure.h  Program.cpp  Program.h  ReadStatement.cpp  ReadStatement.h  RelationalOperation.cpp  RelationalOperation.h  Statement.cpp  Statement.h  StatementType.cpp  StatementType.h  Util.h  Variable.cpp  Variable.h  WhileStatement.cpp  (+1 more)
Team03/Code03/src/spa/src/common/SpaException/: SemanticErrorException.cpp  SemanticErrorException.h  SpaException.h  SyntaxErrorException.cpp  SyntaxErrorException.h
Team03/Code03/src/spa/src/common/cfg/: Cfg.cpp  Cfg.h  CfgNode.cpp  CfgNode.h
Team03/Code03/src/spa/src/common/expression/: ArithmeticOperation.cpp  ArithmeticOperation.h  ConditionalOperation.cpp  ConditionalOperation.h  Constant.cpp  Constant.h  Expression.cpp  Expression.h  Operation.cpp  Operation.h  RelationalOperation.cpp  RelationalOperation.h  Variable.cpp  Variable.h
Team03/Code03/src/spa/src/common/spa_exception/: QPSEvaluationException.cpp  QPSEvaluationException.h  SemanticErrorException.cpp  SemanticErrorException.h  SpaException.cpp  SpaException.h  SyntaxErrorException.cpp  SyntaxErrorException.h
Team03/Code03/src/spa/src/common/statement/: AssignStatement.cpp  AssignStatement.h  CallStatement.cpp  CallStatement.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  ReadStatement.cpp  ReadStatement.h  Statement.cpp  Statement.h  WhileStatement.cpp  WhileStatement.h
Team03/Code03/src/spa/src/pkb/: AbstractionManager.cpp  AbstractionManager.h  EntityManager.cpp  EntityManager.h  NormalStore.cpp  NormalStore.h  PatternManager.cpp  PatternManager.h  PopulatePKB.cpp  PopulatePKB.h  ProcedureStore.h  QueryPKB.cpp  QueryPKB.h  StatementStore.h  Store.h  StoreInterface.h
Team03/Code03/src/spa/src/pkb/abstraction_store/: CallStore.cpp  CallStore.h  DirectTransitiveStore.cpp  DirectTransitiveStore.h  FollowStore.cpp  FollowStore.h  ModifyStore.cpp  ModifyStore.h  NextStore.cpp  NextStore.h  ParentStore.cpp  ParentStore.h  SPVStore.cpp  SPVStore.h  StmtStmtStore.cpp  StmtStmtStore.h  UseStore.cpp  UseStore.h
Team03/Code03/src/spa/src/pkb/entity_store/: AssignStatementStore.cpp  AssignStatementStore.h  ConstVarStore.cpp  ConstVarStore.h  EntityStoreInterface.h  IfStatementStore.cpp  IfStatementStore.h  NormalStore.cpp  NormalStore.h  PrintStatementStore.cpp  PrintStatementStore.h  ProcedureStore.cpp  ProcedureStore.h  ReadStatementStore.cpp  ReadStatementStore.h  StatementStore.cpp  StatementStore.h  WhileStatementStore.cpp  WhileStatementStore.h
Team03/Code03/src/spa/src/pkb/manager/: AbstractionManager.cpp  AbstractionManager.h  EntityManager.cpp  EntityManager.h  PatternManager.cpp  PatternManager.h
Team03/Code03/src/spa/src/pkb/pattern_store/: AssignPatternStore.cpp  AssignPatternStore.h  IfWhilePatternStore.cpp  IfWhilePatternStore.h
Team03/Code03/src/spa/src/qps/: EntityTypeConverter.cpp  EntityTypeConverter.h  QpsManager.cpp  QpsManager.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryFacade.cpp  QueryFacade.h  QueryParser.cpp  QueryParser.h  QueryTokenizer.cpp  QueryTokenizer.h  QueryValidator.cpp  QueryValidator.h
Team03/Code03/src/spa/src/qps/util/: EntityTypeConverter.cpp  EntityTypeConverter.h  QueryTokenValidator.cpp  QueryTokenValidator.h
Team03/Code03/src/spa/src/sp/: sp.cpp  sp.h
Team03/Code03/src/spa/src/sp/Tokenizer/: NameToken.cpp  NameTokenFactory.cpp  NameTokenFactory.h  PunctuationToken.h  PunctuationTokenFactory.cpp  PunctuationTokenFactory.h  TokenFactory.cpp  TokenFactory.h  Tokenizer.cpp  Tokenizer.h
Team03/Code03/src/spa/src/sp/design_extractor/: AbstractionExtractor.cpp  AbstractionExtractor.h  CfgExtractor.cpp  CfgExtractor.h  DesignExtractor.cpp  DesignExtractor.h  EntityExtractor.cpp  EntityExtractor.h  Visitor.h
Team03/Code03/src/spa/src/sp/parser/: ArithmeticOperationParser.cpp  ArithmeticOperationParser.h  AssignStatementParser.cpp  AssignStatementParser.h  CallStatementParser.cpp  CallStatementParser.h  ConditionalOperationParser.cpp  ConditionalOperationParser.h  ConstantParser.cpp  ConstantParser.h  EntityParser.h  ExpressionParser.h  ExpressionParserFactory.cpp  ExpressionParserFactory.h  IfStatementParser.cpp  IfStatementParser.h  OperationParser.cpp  OperationParser.h  Parser.cpp  Parser.h  PrintStatementParser.cpp  PrintStatementParser.h  ProcedureParser.cpp  ProcedureParser.h  ReadStatementParser.cpp  ReadStatementParser.h  StatementParser.cpp  (+9 more)
Team03/Code03/src/unit_testing/: CMakeLists.txt
Team03/Code03/src/unit_testing/src/: TestAST.cpp  TestPKB.cpp  TestParser.cpp  TestQPS.cpp  TestSP.cpp
Team03/Code03/src/unit_testing/src/QPS/: TestDeclarationsParser.cpp  TestEntityTypeConverter.cpp  TestQPS.cpp  TestQueryParser.cpp  TestQueryTokenizer.cpp  TestQueryValidator.cpp  TestSyntaxSemanticErrorsCatching.cpp
Team03/Code03/src/unit_testing/src/pkb/: TestAbstractionStore.cpp  TestEntityStore.cpp  TestPatternStore.cpp
Team03/Code03/src/unit_testing/src/qps/: TestQueryEvaluationContext.cpp
Team03/Code03/src/unit_testing/src/sp/: TestSPToPKB.cpp
(+297 files in other folders)
